# assemblyteacher

./: .dockerignore  .gitignore  Cargo.toml  README.md  SKILL.md  rustfmt.toml
contrib/: Dockerfile  Dockerfile.deploy  build.sh  roll.sh  test.sh
crates/asm-core/: Cargo.toml
crates/asm-core/src/: asm.rs  decode.rs  encode.rs  error.rs  format.rs  insn.rs  lib.rs  operand.rs  reg.rs
crates/asm-core/tests/: differential.rs
crates/asm-emu/: Cargo.toml
crates/asm-emu/src/: alu.rs  cpu.rs  effects.rs  fault.rs  flags.rs  lib.rs  mem.rs  regs.rs
crates/asm-emu/tests/: programs.rs
crates/binfmt/: Cargo.toml
crates/binfmt/src/: elf.rs  error.rs  lib.rs  pe.rs  reader.rs  tests.rs  types.rs
crates/binfmt/tests/: real_binaries.rs
crates/lesson/: Cargo.toml
crates/lesson/src/: check.rs  error.rs  lib.rs  load.rs  model.rs  search.rs  validate.rs
crates/lesson/tests/: curriculum.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  hexnum.rs  lib.rs  main.rs
crates/server/src/routes/: asm.rs  emu.rs  inspect.rs  lessons.rs  mod.rs  search.rs
crates/server/tests/: api.rs
docs/: api.md  architecture.md  deployment.md
lessons/: README.md
lessons/01-computer-fundamentals/: part.toml
lessons/01-computer-fundamentals/01-binary-and-hexadecimal/: README.md  lesson.md
lessons/01-computer-fundamentals/02-signed-integers/: README.md  lesson.md
lessons/01-computer-fundamentals/03-endianness/: README.md  lesson.md
lessons/01-computer-fundamentals/04-bitwise-shifts/: README.md  lesson.md
lessons/02-cpu-architecture/: part.toml
lessons/02-cpu-architecture/01-registers/: README.md  lesson.md
lessons/03-assembly-language/: part.toml
lessons/03-assembly-language/01-first-instructions/: README.md  lesson.md
lessons/03-assembly-language/02-addressing-modes/: README.md  lesson.md
lessons/04-stack-and-heap/: part.toml
lessons/04-stack-and-heap/01-the-stack/: README.md  lesson.md
lessons/04-stack-and-heap/02-calling-conventions/: README.md  lesson.md
lessons/04-stack-and-heap/03-heap-allocation/: README.md  lesson.md
lessons/05-memory/: part.toml
lessons/05-memory/01-virtual-memory/: README.md  lesson.md
lessons/05-memory/02-aslr-and-mapping/: README.md  lesson.md
lessons/06-processes/: part.toml
lessons/06-processes/01-processes-and-files/: README.md  lesson.md
lessons/06-processes/02-threads-and-synchronization/: README.md  lesson.md
lessons/07-executable-formats/: part.toml
lessons/07-executable-formats/01-elf-disk-to-memory/: README.md  lesson.md
lessons/07-executable-formats/02-pe-disk-to-memory/: README.md  lesson.md
lessons/07-executable-formats/03-tls-callbacks/: README.md  lesson.md
lessons/07-executable-formats/04-entry-point-to-main/: README.md  lesson.md
lessons/08-dynamic-linking/: part.toml
lessons/09-reverse-engineering/: part.toml
lessons/10-debugging/: part.toml
lessons/11-memory-structures/: part.toml
lessons/12-compiler-behavior/: part.toml
lessons/13-os-interaction/: part.toml
lessons/14-security/: part.toml
lessons/15-advanced-topics/: part.toml
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: api.ts  main.ts  style.css
web/test/: asm-lang.test.ts  asm-tokens.test.ts  convert.test.ts  diff.test.ts  emu-state.test.ts  endian.test.ts  hex.test.ts  insninfo.test.ts  markdown-helpers.test.ts  markdown.test.ts  numinfo.test.ts  omni-search.test.ts  reginfo.test.ts  search.test.ts  word.test.ts
(+93 files in other folders)
