[package]
name = "asm-emu"
description = "A step-by-step x86_64 interpreter that records every effect."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
asm-core.workspace = true
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

