[package]
name = "binfmt"
description = "ELF and PE parsers written for inspection, not for loading."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror.workspace = true

