[package]
name = "lesson"
description = "The lesson framework: load, validate and grade lessons."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
asm-core.workspace = true
asm-emu.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
toml = "0.9"

